# system-controller-rust

./: Cargo.toml  README.md  TECH_SPEC.md  inventory-small.ini  inventory.ini  run-test.sh  services.yaml
src/: app.rs  logging.rs  main.rs
src/config/: inventory.rs  mod.rs  services.rs
src/monitor/: mod.rs  status.rs
src/ssh/: session.rs
src/tui/: event.rs  mod.rs  ui.rs
