[package]
name = "system-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
openssh = { version = "0.11", features = ["native-mux"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
glob-match = "0.2"
anyhow = "1"
log = { version = "0.4", features = ["std"] }
